# rucene

./: Cargo.toml
benches/index/: main.rs
examples/: example.rs
src/: error.rs  lib.rs
src/core/analysis/: mod.rs  token_stream.rs  whitespace_tokenizer.rs
src/core/codec/: codec_util.rs  compound.rs  fields.rs  live_docs.rs  matching_reader.rs  mod.rs  multi_fields.rs  multi_terms.rs  posting_iterator.rs  sorter.rs  terms.rs
src/core/codec/doc_values/: doc_values_consumer.rs  doc_values_format.rs  doc_values_iterator.rs  doc_values_producer.rs  doc_values_writer.rs  mod.rs
src/core/codec/field_infos/: field_infos_format.rs  mod.rs
src/core/codec/norms/: mod.rs  norm_values_writer.rs  norms.rs  norms_consumer.rs  norms_producer.rs
src/core/codec/points/: mod.rs  point_values.rs  point_values_writer.rs  points_reader.rs  points_writer.rs
src/core/doc/: doc_values.rs  document.rs  field.rs  index_options.rs  mod.rs  term.rs
src/core/highlight/: frag_list_builder.rs  fragments_builder.rs  fvh_highlighter.rs  mod.rs
src/core/index/: mod.rs  term.rs
src/core/search/: explanation.rs  mod.rs  search_manager.rs  searcher.rs  statistics.rs
src/core/store/: io_context.rs  mod.rs  rate_limiter.rs
src/core/util/: bit_set.rs  bit_util.rs  bits.rs  byte_block_pool.rs  byte_slice_reader.rs  bytes_ref_hash.rs  compression.rs  context.rs  disi.rs  doc_id_set.rs  doc_id_set_builder.rs  int_block_pool.rs  ints_ref.rs  math.rs  mod.rs  numeric.rs  paged_bytes.rs  selector.rs  small_float.rs  sorter.rs  variant_value.rs  version.rs
tests/: integration.rs
(+145 files in other folders)
