[package]
name = "rucene"
version = "0.1.1"
edition = '2021'
authors = ["Zhihu Search Team"]
repository = "https://github.com/zhihu/rucene"
license-file = "LICENSE"
description = """
Rucene is a Rust port of the popular Apache Lucene project. Rucene is 
not a complete application, but rather a code library and API that 
can easily be used to add full text search capabilities to applications.
"""

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thread_local = "0.3"
unicode_reader = "0.1.1"
num-traits = "0.2"
byteorder = "1"
crunchy = "0.2.2"
thiserror = "1.0.61"
regex = "1.10.5"
memmap2 = "0.9.4"
bytes = "1.6.0"
crc = "1.5.0"
smallvec = "1.13.2"
crossbeam = "0.8.4"
flate2 = "1.0.30"
log = "0.4.22"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.10.1"

# The release profile, used for `cargo build --release`
[profile.release]
debug = true
